// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> Should render correctly 1`] = `
<div>
  <div
    class="sc-bqWxrE VcTDu"
  >
    <h1
      class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;

exports[`<PageTitle /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="sc-bqWxrE VcTDu"
  >
    <h1
      class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ test-custom-classname"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;

exports[`<PageTitle /> Should render correctly with other props 1`] = `
<div>
  <div
    class="sc-bqWxrE VcTDu"
  >
    <div
      class="sc-kDvujY bJLGdG"
    >
      <a
        class="sc-iBYQkv jNlLug"
        href="/test"
      >
        ⇠ test
      </a>
    </div>
  </div>
  <div
    class="sc-bqWxrE VcTDu"
  >
    <h1
      class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;
